<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvHiragana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hiragana"
        android:layout_marginTop="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tvMeanings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meanings"/>
    </ScrollView>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:text="@string/close"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_gravity="end"
        android:layout_marginTop="8dp" />

</LinearLayout>